minor show page changes + caart summary spacing fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -200,7 +200,7 @@ body {
     padding: 0.3rem 1.2rem;
     font-size: 1rem;
     height: 2.4rem;
-    border-radius: 1px;
+    border-radius: 3px;
   }
 }
 
