--- a/app/assets/stylesheets/pages/_garments.scss
+++ b/app/assets/stylesheets/pages/_garments.scss
@@ -76,6 +76,8 @@ _garments.scss
   grid-gap: 100px;
   margin-top: 20px;
   background-color: #121212;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #1e1e1e;
 }
 
 .card-category {
