--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -33,6 +33,8 @@ html, body {
   padding-top: 80px;
   min-height: calc(100vh - 20px);
   padding-left: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #1e1e1e;
 }
 
 .styles-images-container {
